--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
                         <TR>
                         <TD class=content_title>&nbsp;</TD>
                           <TD class=content width="96%">
-			<p class="STYLE223">Kubernetes Reliability and an Avenue to Reliable Cloud Infrastructures at IEEE Emerging Technology Reliability Roundtable and ECE 542/CS 536</p>
+			<p class="STYLE223">Kubernetes Reliability and an Avenue to Reliable Cloud Infrastructures at IEEE Emerging Technology Reliability Roundtable</p>
 			<p class="STYLE223"><a href="https://www.usenix.org/conference/srecon24americas/presentation/xu" target="_blank">Cross-System Interaction Failures: Don't Fail through the Cracks</a> at SREcon24 Americas</p>
 			<p class="STYLE223">Acto is selected as a <a href="https://static.sched.com/hosted_files/kccnceu2024/15/acto-poster-kubecon.pdf" target="_blank">solution showcase</a> at <a href="https://events.linuxfoundation.org/kubecon-cloudnativecon-europe/program/schedule/" target="_blank">KubeCon+CloudNativeCon Europe 2024</a></p>
 			<p class="STYLE223">Virtual device farm is selected as a 2024 <a href="https://www.sigmobile.org/pubs/getmobile/" target="_blank">GetMobile</a> Research Highlight article</p>
