--- a/pub.html
+++ b/pub.html
@@ -93,6 +93,22 @@ td.papers {
 	</tr>
 
 	<tr>
+		<td class="date"><font color="#083b89">ASPLOS'24</font></td>
+			<td class="papers">
+				  <div align="justify" class="STYLE4">
+					  <p></p>
+						  <span style="font-size: 12pt;">
+						  <strong>Direct Memory Translation for Virtualized Clouds</strong> [<a href="pub/dmt.pdf" target="_blank">pdf</a> | <a href="pub/dmt_bib.txt" target="_blank">bib</a>]
+						  <br>
+						  Jiyuan Zhang, Weiwei Jia, Siyuan Chai, Peizhe Liu, Jongyul Kim, and Tianyin Xu
+						  <br>
+						  In Proceedings of the 29th ACM International Conference on Architectural Support for Programming Languages and Operating Systems (<font color="#083b89"><b>ASPLOS'24</b></font>), San Diego, CA Apr. 2024.
+					  </span>
+				  </div>
+		</td>
+	</tr>
+	  
+	<tr>
 		<td class="date"><font color="#083b89">EuroSys'24</font></td>
 			<td class="papers">
 				  <div align="justify" class="STYLE4">
