--- a/index.html
+++ b/index.html
@@ -557,10 +557,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
                               <TD class=content width="96%">
 								<p class="STYLE223"><a href="https://yulistic.gitlab.io/" target="_blank">Jongyul Kim</a>, Postdoc Research Fellow (Fall 2023 - now)</p>
 								<p class="STYLE223"><a href="https://marshtompsxd.github.io/" target="_blank">Xudong Sun</a>, PhD Candidate (Fall 2019 - now), awarded <a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/yunni-and-maxine-pao-memorial-fellowship" target="_blank"><font color="#E84A27">Yunni and Maxine Pao Memorial Fellowship</font></a></p>
-								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Jinghao Jia</a>, PhD Candidate (Fall 2020 - now), co-advised by <a href="https://people.cs.vt.edu/djwillia/" target="_blank">Dan Williams</a>, awarded <a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/richard-t-cheng-endowed-fellowship" target="_blank"><font color="#E84A27">Richard T. Cheng Fellowship</font></a>, <a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/outstanding-teaching-assistants" target="_blank"><font color="#E84A27">Outstanding TA Award</font></a></p>
-	<!--			
-								<p class="STYLE223"><a href="https://liliatangxy.github.io/" target="_blank">Lilia Tang</a>, PhD Candidate (Fall 2020 - now), awarded <a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/ray-ozzie-computer-science-fellowship" target="_blank"><font color="#E84A27">Ray Ozzie Fellowship</font></a></p>
-	-->							
+								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Jinghao Jia</a>, PhD Candidate (Fall 2020 - now), co-advised by <a href="https://people.cs.vt.edu/djwillia/" target="_blank">Dan Williams</a>, awarded <a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/richard-t-cheng-endowed-fellowship" target="_blank"><font color="#E84A27">Richard T. Cheng Fellowship</font></a>, <a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/outstanding-teaching-assistants" target="_blank"><font color="#E84A27">Outstanding TA Award</font></a></p>							
 								<p class="STYLE223"><a href="https://schai.me/" target="_blank">Siyuan Chai</a>, PhD Candidate (Fall 2021 - now)</p>
 				            			<p class="STYLE223"><a href="https://yinfangchen.github.io" target="_blank">Yinfang Chen</a>, PhD Candidate (Fall 2021 - now)</p>
 				                                <p class="STYLE223"><a href="https://tylergu.com/" target="_blank">Tyler Gu</a>, PhD Candidate (Fall 2021 - now), awarded <a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/computer-science-gene-golub-fellowship" target="_blank"><font color="#E84A27">Gene Golub Fellowship</font></a></p>
@@ -575,7 +572,6 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 				                                <p class="STYLE223"><a href="https://jiyuan.is/" target="_blank">Jiyuan Zhang</a>, MS Student (Fall 2022 - now)</p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Wenjie Ma</a>, Research Scholar (Summer 2023 - now)</p>
 				      				<p class="STYLE223"><a href="https://www.linkedin.com/in/fan-chung-8637741a4/" target="_blank">Fan Chung</a>, Undergraduate Student (UIUC/NYCU) (Spring 2023 - now)</p>
-								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Saad Sher Alam</a>, Undergraduate Student (LUMS) (Summer 2023 - now)</p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">William Zheng</a>, Undergraduate Student (UIUC) (Summer 2023 - now)</p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Mark Zhang</a>, Undergraduate Student (UIUC) (Spring 2024 - now)</p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Peizhe Liu</a>, Undergraduate Student (UIUC) (Spring 2024 - now)</p>
@@ -605,8 +601,9 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 				  <p class="STYLE223"><a href="https://x-czh.github.io/" target="_blank">Zhanghao Chen</a>, MCS 2020 (<a href="https://github.com/xlab-uiuc/cflow" target="_blank">project</a>) &rarr; ByteDance (Stream Computing Infra)</p>
 				  <p class="STYLE223"><a href="http://www.elaine-ang.space/" target="_blank">Elaine Ang</a>, MS 2019 (<a href="pub/ANG-THESIS-2019.pdf" target="_blank">thesis</a>) &rarr; Google (Spanner)</p>
 				  <p class="STYLE224"># Bachelors</p>
-				  <p class="STYLE223"><a href="https://irisesd.github.io/" target="_blank">Cheng Ding</a> (USTC), UIUC+ SUR in SE, 2024, co-advised by <a href="https://www.cs.cornell.edu/~legunsen/" target="_blank">Owolabi Legunsen</a> &rarr; University of Texas at Austin (PhD)</p>
-				  <p class="STYLE223"><a href="https://zichengma.github.io/" target="_blank">Zicheng Ma</a>, BE 2024 &rarr; Harvard University (MS)</p>
+				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Saad Sher Alam</a> (LUMS), UIUC+ SUR in SE, 2023-2024 &rarr; UIUC (MS)</p>
+				  <p class="STYLE223"><a href="https://irisesd.github.io/" target="_blank">Cheng Ding</a> (USTC), UIUC+ SUR in SE, 2023-2024, co-advised by <a href="https://www.cs.cornell.edu/~legunsen/" target="_blank">Owolabi Legunsen</a> &rarr; University of Texas at Austin (PhD)</p>
+				  <p class="STYLE223"><a href="https://zichengma.github.io/" target="_blank">Zicheng Ma</a>, BE, 2023-2024 &rarr; Harvard University (MS)</p>
 				  <p class="STYLE223"><a href="https://essoz.github.io/" target="_blank">Yuxuan (Matt) Jiang</a>, BE 2023 &rarr; University of Michigan (PhD)</p>
 				  <p class="STYLE223"><a href="https://nsdi.dev/" target="_blank">Feiran (Alex) Qin</a>, (ShanghaiTech/UIUC), Fall 2022 &rarr; North Carolina State University (PhD)</p>
 				  <p class="STYLE223"><a href="https://github.com/unw9527" target="_blank">Kunle Li</a>, BE 2023 &rarr; CMU (MS)</p>
