--- a/index.html
+++ b/index.html
@@ -496,6 +496,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 		    <a href="https://2024.eurosys.org/" target="_blank">EuroSys</a>,
 		    <a href="https://www.usenix.org/conference/atc24" target="_blank">USENIX ATC</a>,
 		    MICRO (ERC),
+		    SEC,
 		    <a href="https://sesame2024.github.io/" target="_blank">SESAME</a>,
 	          </p>
                   <p class="STYLE223">2023
@@ -622,9 +623,9 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 	-->			  <p class="STYLE223"><a href="https://kaiyuanzhang.com/" target="_blank">Kaiyuan Zhang</a> (UT Dallas), Summer 2020 co-advised by <a href="http://taoxie.cs.illinois.edu/" target="_blank">Tao Xie</a> &rarr; Purdue University (PhD)</p>
 				  <p class="STYLE223"><a href="https://www.linkedin.com/in/ymmao/" target="_blank">Yiming Mao</a> (Nanjing University), Summer 2020 &rarr; UC San Diego (MS)</p>    
 			      	  <p class="STYLE224"># Scholars</p>
-				  <p class="STYLE223"><a href="https://www.linhao.me/" target="_blank">Hao Lin</a>, Visiting PhD student, 2023--2024 &harr; Tsinghua University</p>
-				  <p class="STYLE223"><a href="https://chaitanya-bhandari.com/" target="_blank">Chaitanya B. Bhandari</a>, Research scholar, 2021--2022 &rarr; UIUC (MS) &rarr; TigerBeetle</p> 
-				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Yuanliang Zhang</a> (NUDT), Visiting PhD student, 2019--2020 &rarr; Assistant Professor at NUDT</p>
+				  <p class="STYLE223"><a href="https://www.linhao.me/" target="_blank">Hao Lin</a>, Visiting PhD Student (Tsinghua), 2023--2024 &harr; Tsinghua University</p>
+				  <p class="STYLE223"><a href="https://chaitanya-bhandari.com/" target="_blank">Chaitanya B. Bhandari</a>, Research Scholar, 2021--2022 &rarr; UIUC (MS) &rarr; TigerBeetle</p> 
+				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Yuanliang Zhang</a> (NUDT), Visiting PhD Student (NUDT), 2019--2020 &rarr; Assistant Professor at NUDT</p>
 				</TD>
                           </TR>
 
