--- a/index.html
+++ b/index.html
@@ -564,13 +564,9 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 				                                <p class="STYLE223"><a href="https://tylergu.com/" target="_blank">Tyler Gu</a>, PhD Candidate (Fall 2021 - now), awarded <a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/computer-science-gene-golub-fellowship" target="_blank"><font color="#E84A27">Gene Golub Fellowship</font></a></p>
 								<p class="STYLE223"><a href="https://shuaiwang516.github.io/" target="_blank">Shuai Wang</a>, PhD Candidate (Fall 2021 - now), co-advised by <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a></p>
 	<!--
-				                                <p class="STYLE223"><a href="https://zzjas.com/" target="_blank">Zijie Zhao</a>, PhD Student (Fall 2022 - now), co-advised by <a href="https://lingming.cs.illinois.edu/" target="_blank">Lingming Zhang</a></p>
-								<p class="STYLE223"><a href="https://maknee.github.io/" target="_blank">Henry Zhu</a>, PhD Student (Fall 2022 - now), co-advised by <a href="https://aishwaryaganesan.github.io/" target="_blank">Aishwarya Ganesan</a> and <a href="https://ramalagappan.github.io/" target="_blank">Ramnatthan Alagappan</a></p>
-	-->
-								<p class="STYLE223"><a href="https://xinyulian.tech/" target="_blank">Xinyu (Alex) Lian</a>, MS Student (Fall 2022 - now), co-advised by <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a></p>
+				                                <p class="STYLE223"><a href="https://zzjas.com/" target="_blank">Zijie Zhao</a>, PhD Student (Fall 2022 - now), co-advised by <a href="https://lingming.cs.illinois.edu/" target="_blank">Lingming Zhang</a></p>	-->
 				            			<p class="STYLE223"><a href="https://www.linkedin.com/in/anna-mazhar/" target="_blank">Anna Mazhar</a>, MS Student (Fall 2022 - now)</p>
-				                                <p class="STYLE223"><a href="https://pratiksampat.web.illinois.edu/" target="_blank">Pratik Rajesh Sampat</a>, MS Student (Fall 2022 - now), co-advised by <a href="https://ghose.web.illinois.edu/" target="_blank">Saugata Ghose</a></p>
-				                                <p class="STYLE223"><a href="https://jiyuan.is/" target="_blank">Jiyuan Zhang</a>, MS Student (Fall 2022 - now)</p>
+				                                
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Wenjie Ma</a>, Research Scholar (Summer 2023 - now)</p>
 				      				<p class="STYLE223"><a href="https://www.linkedin.com/in/fan-chung-8637741a4/" target="_blank">Fan Chung</a>, Undergraduate Student (UIUC/NYCU) (Spring 2023 - now)</p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">William Zheng</a>, Undergraduate Student (UIUC) (Summer 2023 - now)</p>
@@ -592,6 +588,9 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 				  <p class="STYLE224"># Doctors</p>
 				  <p class="STYLE223"><a href="https://wenyu.io/" target="_blank">Wenyu Wang</a>, PhD 2022, co-advised by <a href="http://taoxie.cs.illinois.edu/" target="_blank">Tao Xie</a>, awarded <a href="https://cs.illinois.edu/about/awards/graduate-fellowships-awards/3m-foundation-fellowship" target="_blank"><font color="#E84A27">3M Foundation Fellowship</font></a> &rarr; Meta &rarr; Stellar Cyber</p>
 				  <p class="STYLE224"># Maesters</p>
+				  <p class="STYLE223"><a href="https://xinyulian.tech/" target="_blank">Xinyu (Alex) Lian</a>, MS 2024 (thesis), co-advised by <a href="http://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a> &rarr; UIUC (PhD)</p>
+				  <p class="STYLE223"><a href="https://pratiksampat.web.illinois.edu/" target="_blank">Pratik Rajesh Sampat</a>, MS 2024 (thesis), co-advised by <a href="https://ghose.web.illinois.edu/" target="_blank">Saugata Ghose</a> &rarr; AMD Research</p>
+				  <p class="STYLE223"><a href="https://jiyuan.is/" target="_blank">Jiyuan Zhang</a>, MS 2024 (thesis) &rarr; UIUC (PhD)</p>
 				  <p class="STYLE223"><a href="https://www.linkedin.com/in/ruowen-qin-1323ab149" target="_blank">Ruowen Qin</a>, MCS 2023 &rarr; Red Hat</p>
 				  <p class="STYLE223"><a href="https://laphets.com" target="_blank">Wenqing Luo</a>, MS 2023 (<a href="thesis/LUO-THESIS-2023.pdf" target="_blank">thesis</a>), co-advised by <a href="https://aishwaryaganesan.github.io/" target="_blank">Aishwarya Ganesan</a> and <a href="https://ramalagappan.github.io/" target="_blank">Ramnatthan Alagappan</a> &rarr; Apple (Cloud Infra)</p>
 				  <p class="STYLE223"><a href="https://thakkarparth007.github.io/" target="_blank">Parth Thakkar</a>, MS 2023 (<a href="thesis/THAKKAR-THESIS-2023.pdf" target="_blank">thesis</a>) &rarr; Meta (Dev Infra)</p>
