--- a/pub.html
+++ b/pub.html
@@ -77,6 +77,22 @@ td.papers {
 	</tr>
 
 	<tr>
+		<td class="date"><font color="#083b89">FSE'24 Demo</font></td>
+			<td class="papers">
+				  <div align="justify" class="STYLE4">
+					<p></p>
+						<span style="font-size: 12pt;">
+						  <strong>Ctest4J: A Practical Configuration Testing Framework for Java</strong> [<a href="pub/ctest4j.pdf" target="_blank">pdf</a> | <a href="pub/ctest4j_bib.txt" target="_blank">bib</a>]
+						  <br>
+						  Shuai Wang, Xinyu Lian, Qingyu Li, Darko Marinov, and Tianyin Xu
+						  <br>
+						  In Proceedings of the 23rd ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering (<font color="#083b89"><b>ESEC/FSE'24</b></font>), Demonstration Track, Porto de Galinhas, Brazil, Jul. 2024.
+					  	</span>
+				  </div>
+		</td>
+	</tr>
+
+	<tr>
 		<td class="date"><font color="#083b89">ISCA'24</font></td>
 			<td class="papers">
 				  <div align="justify" class="STYLE4">
