--- a/index.html
+++ b/index.html
@@ -566,9 +566,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 	<!--
 				                                <p class="STYLE223"><a href="https://zzjas.com/" target="_blank">Zijie Zhao</a>, PhD Student (Fall 2022 - now), co-advised by <a href="https://lingming.cs.illinois.edu/" target="_blank">Lingming Zhang</a></p>	-->
 				            			<p class="STYLE223"><a href="https://www.linkedin.com/in/anna-mazhar/" target="_blank">Anna Mazhar</a>, MS Student (Fall 2022 - now)</p>
-				                                
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Wenjie Ma</a>, Research Scholar (Summer 2023 - now)</p>
-				      				<p class="STYLE223"><a href="https://www.linkedin.com/in/fan-chung-8637741a4/" target="_blank">Fan Chung</a>, Undergraduate Student (UIUC/NYCU) (Spring 2023 - now)</p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">William Zheng</a>, Undergraduate Student (UIUC) (Summer 2023 - now)</p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Mark Zhang</a>, Undergraduate Student (UIUC) (Spring 2024 - now)</p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Peizhe Liu</a>, Undergraduate Student (UIUC) (Spring 2024 - now)</p>
@@ -603,6 +601,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 				  <p class="STYLE224"># Bachelors</p>
 				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Saad Sher Alam</a> (LUMS), UIUC+ SUR in SE, 2023-2024 &rarr; UIUC (MS)</p>
 				  <p class="STYLE223"><a href="https://irisesd.github.io/" target="_blank">Cheng Ding</a> (USTC), UIUC+ SUR in SE, 2023-2024, co-advised by <a href="https://www.cs.cornell.edu/~legunsen/" target="_blank">Owolabi Legunsen</a> &rarr; University of Texas at Austin (PhD)</p>
+				  <p class="STYLE223"><a href="https://www.linkedin.com/in/fan-chung-8637741a4/" target="_blank">Fan Chung</a>, (UIUC/NYCU), 2023-2024 &rarr; EPFL (PhD)</p>
 				  <p class="STYLE223"><a href="https://zichengma.github.io/" target="_blank">Zicheng Ma</a>, BE, 2023-2024 &rarr; Harvard University (MS)</p>
 				  <p class="STYLE223"><a href="https://essoz.github.io/" target="_blank">Yuxuan (Matt) Jiang</a>, BE 2023 &rarr; University of Michigan (PhD)</p>
 				  <p class="STYLE223"><a href="https://nsdi.dev/" target="_blank">Feiran (Alex) Qin</a>, (ShanghaiTech/UIUC), Fall 2022 &rarr; North Carolina State University (PhD)</p>
