--- a/index.html
+++ b/index.html
@@ -495,8 +495,9 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 	          <p class="STYLE223">2024
 		    <a href="https://2024.eurosys.org/" target="_blank">EuroSys</a>,
 		    <a href="https://www.usenix.org/conference/atc24" target="_blank">USENIX ATC</a>,
-		    MICRO (ERC),
-		    SEC,
+		    <a href="https://microarch.org/micro57/" target="_blank">MICRO (ERC)</a>,
+		    <a href="https://acm-ieee-sec.org/2024/" target="_blank">SEC</a>,
+		    <a href="https://conferences.sigcomm.org/sigcomm/2024/workshop/ebpf/" target="_blank">eBPF</a>,
 		    <a href="https://sesame2024.github.io/" target="_blank">SESAME</a>,
 	          </p>
                   <p class="STYLE223">2023
@@ -606,9 +607,9 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 				  <p class="STYLE223"><a href="https://essoz.github.io/" target="_blank">Yuxuan (Matt) Jiang</a>, BE 2023 &rarr; University of Michigan (PhD)</p>
 				  <p class="STYLE223"><a href="https://nsdi.dev/" target="_blank">Feiran (Alex) Qin</a>, (ShanghaiTech/UIUC), Fall 2022 &rarr; North Carolina State University (PhD)</p>
 				  <p class="STYLE223"><a href="https://github.com/unw9527" target="_blank">Kunle Li</a>, BE 2023 &rarr; CMU (MS)</p>
-				  <p class="STYLE223"><a href="https://taham0.github.io/" target="_blank">Muhammad Taha</a> (LUMS), UIUC+ SUR in SE, 2022 &rarr; Purdue (MS)</p>
+				  <p class="STYLE223"><a href="https://taham0.github.io/" target="_blank">Muhammad Taha</a> (LUMS), UIUC+ SUR in SE, 2022 &rarr; Purdue University (MS)</p>
 	              		  <p class="STYLE223"><a href="https://whentojump.xyz/">Wentao Zhang</a> (SJTU), UIUC+ SUR in SE, 2022 &rarr; UIUC (PhD)</p>
-				  <p class="STYLE223"><a href="https://xinyulian.tech/" target="_blank">Xinyu (Alex) Lian</a>, BE 2022 &rarr; UIUC (MS)</p>
+				  <p class="STYLE223"><a href="https://xinyulian.tech/" target="_blank">Xinyu (Alex) Lian</a>, BE 2022 &rarr; UIUC (MS) &rarr; UIUC (PhD)</p>
 				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Yicheng Lu</a>, BE 2022 &rarr; UIUC (MS)</p>    
 				  <p class="STYLE223"><a href="https://www.cs.columbia.edu/~kele/" target="_blank">Kele Huang</a> (CAS), UIUC+ SUR in SE, 2021 &rarr; Columbia University (PhD)</p>
 				  <p class="STYLE223"><a href="https://fanweneddie.github.io/" target="_blank">Wen Fan</a> (USTC), UIUC+ SUR in SE, 2021 &rarr; Purdue University (PhD)</p>
