--- a/pub.html
+++ b/pub.html
@@ -71,7 +71,7 @@ td.papers {
 						  Xudong Sun, Wenjie Ma, Jiawei Tyler Gu, Zicheng Ma, Tej Chajed, Jon Howell, Andrea Lattuada, Oded Padon, Lalith Suresh, Adriana Szekeres, and Tianyin Xu
 						  <br>
 						  In Proceedings of the 18th USENIX Symposium on Operating Systems Design and Implementation (<font color="#083b89"><b>OSDI'24</b></font>), Santa Clara, CA, Jul. 2024.
-					  	</span>
+						</span>
 				  </div>
 		</td>
 	</tr>
@@ -87,6 +87,8 @@ td.papers {
 						  Shuai Wang, Xinyu Lian, Qingyu Li, Darko Marinov, and Tianyin Xu
 						  <br>
 						  In Proceedings of the 23rd ACM Joint European Software Engineering Conference and Symposium on the Foundations of Software Engineering (<font color="#083b89"><b>ESEC/FSE'24</b></font>), Demonstration Track, Porto de Galinhas, Brazil, Jul. 2024.
+						  <br>
+						  Project: <a href="https://github.com/xlab-uiuc/ctest4j" target="_blank">https://github.com/xlab-uiuc/ctest4j</a>
 					  	</span>
 				  </div>
 		</td>
@@ -119,6 +121,8 @@ td.papers {
 						  Jiyuan Zhang, Weiwei Jia, Siyuan Chai, Peizhe Liu, Jongyul Kim, and Tianyin Xu
 						  <br>
 						  In Proceedings of the 29th ACM International Conference on Architectural Support for Programming Languages and Operating Systems (<font color="#083b89"><b>ASPLOS'24</b></font>), San Diego, CA Apr. 2024.
+						  <br>
+						  Artifact: <a href="https://github.com/xlab-uiuc/dmt" target="_blank">https://github.com/xlab-uiuc/dmt</a>
 					  </span>
 				  </div>
 		</td>
