--- a/index.html
+++ b/index.html
@@ -433,6 +433,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
                         <TD class=content_title>&nbsp;</TD>
                           <TD class=content width="96%">
 			<p class="STYLE223">Kubernetes Reliability and an Avenue to Reliable Cloud Infrastructures at IEEE Emerging Technology Reliability Roundtable</p>
+			<p class="STYLE223"><a href="https://elisa.tech/event/elisa-seminar-making-linux-fly-towards-certified-linux-kernel/" target="_blank">Making Linux Fly: Towards Certified Linux Kernel</a> at ELISA Seminar</p>
 			<p class="STYLE223"><a href="pub/srecon24americas_slides-xu.pdf" target="_blank">Cross-System Interaction Failures: Don't Fail through the Cracks</a> at <a href="https://www.usenix.org/conference/srecon24americas/presentation/xu" target="_blank">SREcon24 Americas</a></p>
 			<p class="STYLE223">Acto is selected as a <a href="https://static.sched.com/hosted_files/kccnceu2024/15/acto-poster-kubecon.pdf" target="_blank">solution showcase</a> at <a href="https://events.linuxfoundation.org/kubecon-cloudnativecon-europe/program/schedule/" target="_blank">KubeCon+CloudNativeCon Europe 2024</a></p>
 			<p class="STYLE223">Virtual device farm is selected as a 2024 <a href="https://www.sigmobile.org/pubs/getmobile/" target="_blank">GetMobile</a> Research Highlight article</p>
