--- a/index.html
+++ b/index.html
@@ -492,6 +492,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 	          </p>
 	          <p class="STYLE223">2025
 		    <a href="https://www.asplos-conference.org/asplos-2025-call-for-papers/" target="_blank">ASPLOS</a>,
+		    <a href="https://www.usenix.org/conference/nsdi25" target="_blank">NSDI</a>,
 	          </p>
 	          <p class="STYLE223">2024
 		    <a href="https://2024.eurosys.org/" target="_blank">EuroSys</a>,
