--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 						  <TR>
 						  <TD class=content_title>&nbsp;</TD>
 					      <TD class=content width="96%">
-						      <p class="STYLE223">2024 C.W. Gear Outstanding Junior Faculty Award (read about <a href="https://cs.illinois.edu/news/remembering-department-head-faculty-member-charles-william-bill-gear" target="_blank">Professor C.W. Gear</a>)</p>
+						      <p class="STYLE223">2024 C.W. Gear Outstanding Junior Faculty Award (tribute to <a href="https://cs.illinois.edu/news/remembering-department-head-faculty-member-charles-william-bill-gear" target="_blank">Professor C.W. Gear</a>)</p>
 						      <p class="STYLE223">2024 Dean's Award for Excellence in Research</p>
 						      <p class="STYLE223">2023 Gilles Muller Best Artifact Award at EuroSys'23</p>
 						      <p class="STYLE223">2023 (Fall) UIUC List of Teachers Ranked as Excellent (for CS 591SN)</p>
