--- a/pub.html
+++ b/pub.html
@@ -102,7 +102,7 @@ td.papers {
 						  <span style="font-size: 12pt;">
 						  <strong>EcoFaaS: Rethinking the Design of Serverless Environments for Energy Efficiency</strong> [<a href="pub/ecofaas.pdf" target="_blank">pdf</a> | <a href="pub/ecofaas_bib.txt" target="_blank">bib</a>]
 						  <br>
-						  Jovan Stojkovic, Nikoleta Markela Iliakopoulou, Tianyin Xu, Hubertus Franke, and Josep Torrellas,
+						  Jovan Stojkovic, Nikoleta Iliakopoulou, Tianyin Xu, Hubertus Franke, and Josep Torrellas,
 						  <br>
 						  In Proceedings of the 51st International Symposium on Computer Architecture (<font color="#083b89"><b>ISCA'24</b></font>), Buenos Aires, Argentina, Jun. 2024.
 					  </span>
