--- a/index.html
+++ b/index.html
@@ -570,7 +570,6 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 	<!--
 				                                <p class="STYLE223"><a href="https://zzjas.com/" target="_blank">Zijie Zhao</a>, PhD Student (Fall 2022 - now), co-advised by <a href="https://lingming.cs.illinois.edu/" target="_blank">Lingming Zhang</a></p>	
 	-->
-								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Wenjie Ma</a>, Research Scholar (Summer 2023 - now)</p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">William Zheng</a>, Undergraduate Student (UIUC) (Summer 2023 - now)</p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Mark Zhang</a>, Undergraduate Student (UIUC) (Spring 2024 - now)</p>
 				      <!--
@@ -626,6 +625,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 	-->			  <p class="STYLE223"><a href="https://kaiyuanzhang.com/" target="_blank">Kaiyuan Zhang</a> (UT Dallas), Summer 2020 co-advised by <a href="http://taoxie.cs.illinois.edu/" target="_blank">Tao Xie</a> &rarr; Purdue University (PhD)</p>
 				  <p class="STYLE223"><a href="https://www.linkedin.com/in/ymmao/" target="_blank">Yiming Mao</a> (Nanjing University), Summer 2020 &rarr; UC San Diego (MS)</p>    
 			      	  <p class="STYLE224"># Scholars</p>
+				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Wenjie Ma</a>, Research Scholar, 2023--2024 &harr; University of California, Berkeley (PhD)</p>
 				  <p class="STYLE223"><a href="https://www.linhao.me/" target="_blank">Hao Lin</a>, Visiting PhD Student (Tsinghua), 2023--2024 &harr; Tsinghua University</p>
 				  <p class="STYLE223"><a href="https://chaitanya-bhandari.com/" target="_blank">Chaitanya B. Bhandari</a>, Research Scholar, 2021--2022 &rarr; UIUC (MS) &rarr; TigerBeetle</p> 
 				  <p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Yuanliang Zhang</a> (NUDT), Visiting PhD Student (NUDT), 2019--2020 &rarr; Assistant Professor at NUDT</p>
