--- a/pub.html
+++ b/pub.html
@@ -77,6 +77,22 @@ td.papers {
 	</tr>
 
 	<tr>
+		<td class="date"><font color="#083b89">ATC'24</font></td>
+			<td class="papers">
+				  <div align="justify" class="STYLE4">
+					<p></p>
+						<span style="font-size: 12pt;">
+						  <strong>Fast (Trapless) Kernel Probes Everywhere</strong> [<a href="pub/uno-kprobe.pdf" target="_blank">pdf</a> | <a href="pub/uno-kprobe_bib.txt" target="_blank">bib</a>]
+						  <br>
+						  Jinghao Jia, Michael Le, Salman Ahmed, Dan Williams, Hani Jamjoom, and Tianyin Xu
+						  <br>
+						  In Proceedings of the 2024 USENIX Annual Technical Conference (<font color="#083b89"><b>USENIX ATC'24</b></font>), Santa Clara, CA, Jul. 2024.
+						</span>
+				  </div>
+		</td>
+	</tr>
+
+	<tr>
 		<td class="date"><font color="#083b89">FSE'24 Demo</font></td>
 			<td class="papers">
 				  <div align="justify" class="STYLE4">
