--- a/pub.html
+++ b/pub.html
@@ -87,6 +87,14 @@ td.papers {
 						  Jinghao Jia, Michael Le, Salman Ahmed, Dan Williams, Hani Jamjoom, and Tianyin Xu
 						  <br>
 						  In Proceedings of the 2024 USENIX Annual Technical Conference (<font color="#083b89"><b>USENIX ATC'24</b></font>), Santa Clara, CA, Jul. 2024.
+						  <br>
+						  Contributions to <a href="https://docs.kernel.org/trace/kprobes.html" target="_blank">Linux Kprobes</a>:
+						  <br>
+						  <a href="https://github.com/torvalds/linux/commit/290eb13f1a657313177789159a6d1786187cf168" target="_blank">x86/kprobes: Boost more instructions from grp2/3/4/5</a>
+						  <br>
+						  <a href="https://github.com/torvalds/linux/commit/e884edbb844fd6935e4368734edd9f3fa46ec5c2" target="_blank">x86/kprobes: Prohibit kprobing on INT and UD</a>
+						  <br>
+						  <a href="https://github.com/torvalds/linux/commit/f5d03da48d062966c94f0199d20be0b3a37a7982" target="_blank">x86/kprobes: fix incorrect return address calculation in kprobe_emulate_call_indirect</a>
 						</span>
 				  </div>
 		</td>
