--- a/pub.html
+++ b/pub.html
@@ -90,9 +90,9 @@ td.papers {
 						  <br>
 						  Contributions to <a href="https://docs.kernel.org/trace/kprobes.html" target="_blank">Linux Kprobes</a>:
 						  <br>
-						  <a href="https://github.com/torvalds/linux/commit/290eb13f1a657313177789159a6d1786187cf168" target="_blank">x86/kprobes: Boost more instructions from grp2/3/4/5</a>
+						  <a href="https://github.com/torvalds/linux/commit/290eb13f1a657313177789159a6d1786187cf168" target="_blank">x86/kprobes: boost more instructions from grp2/3/4/5</a>
 						  <br>
-						  <a href="https://github.com/torvalds/linux/commit/e884edbb844fd6935e4368734edd9f3fa46ec5c2" target="_blank">x86/kprobes: Prohibit kprobing on INT and UD</a>
+						  <a href="https://github.com/torvalds/linux/commit/e884edbb844fd6935e4368734edd9f3fa46ec5c2" target="_blank">x86/kprobes: prohibit kprobing on INT and UD</a>
 						  <br>
 						  <a href="https://github.com/torvalds/linux/commit/f5d03da48d062966c94f0199d20be0b3a37a7982" target="_blank">x86/kprobes: fix incorrect return address calculation in kprobe_emulate_call_indirect</a>
 						</span>
