--- a/index.html
+++ b/index.html
@@ -573,7 +573,11 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 	<!--
 				                                <p class="STYLE223"><a href="https://zzjas.com/" target="_blank">Zijie Zhao</a>, PhD Student (Fall 2022 - now), co-advised by <a href="https://lingming.cs.illinois.edu/" target="_blank">Lingming Zhang</a></p>	
 	-->
+								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Quan Hao Ng</a>, Undergraduate Student (UIUC) (Spring 2024 - now)</p>
+								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Minh Phan</a>, Undergraduate Student (UIUC) (Spring 2024 - now)</p>
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">William Zheng</a>, Undergraduate Student (UIUC) (Summer 2023 - now)</p>
+								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Mark Zhang</a>, Undergraduate Student (UIUC) (Spring 2024 - now)</p>
+								
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Mark Zhang</a>, Undergraduate Student (UIUC) (Spring 2024 - now)</p>
 				      <!--
 								<p class="STYLE223"><a href="https://www.youtube.com/watch?v=mHLMsZ20LI8" target="_blank">Jiajun (Kashun) Cheng</a>, Undergraduate student (ShanghaiTech/Berkeley) (Summer 2023 - now)</p>
