virtual devices getmobile

--- a/pub.html
+++ b/pub.html
@@ -228,7 +228,7 @@ td.papers {
 						  <br>
 						  Artifact: <a href="https://github.com/Android-Emulation-Testing/emu-fidelity-ae" target="_blank">https://github.com/Android-Emulation-Testing/emu-fidelity-ae</a>
 						  <br>
-						  <font color="#C40233"><b>Selected as an Highlight article by SIGMOBILE Mobile Computing and Communications Review (GetMobile)</b></font>
+						  <font color="#C40233"><b>Selected as an Highlight article by SIGMOBILE Mobile Computing and Communications Review (GetMobile): <a href="pub/virtual-device-getmobile.pdf" target="_blank">pdf</a></b></font>
 					  </span>
 				  </div>
 		  </td>
