--- a/pub.html
+++ b/pub.html
@@ -88,7 +88,9 @@ td.papers {
 						  <br>
 						  In Proceedings of the 2024 USENIX Annual Technical Conference (<font color="#083b89"><b>USENIX ATC'24</b></font>), Santa Clara, CA, Jul. 2024.
 						  <br>
+						  <font color="#C40233">
 						  Contributions to <a href="https://docs.kernel.org/trace/kprobes.html" target="_blank">Linux Kprobes</a>:
+						  </font>
 						  <br>
 						  <a href="https://github.com/torvalds/linux/commit/290eb13f1a657313177789159a6d1786187cf168" target="_blank">x86/kprobes: boost more instructions from grp2/3/4/5</a>
 						  <br>
@@ -541,11 +543,15 @@ td.papers {
 						  <span style="font-size: 12pt;">
 						  <strong>DepFast: Orchestrating Code of Quorum Systems</strong> [<a href="pub/depfast-atc.pdf" target="_blank">pdf</a> | <a href="pub/depfast-atc_bib.txt" target="_blank">bib</a>]
 						  <br>
-						      Xuhao Luo, Weihai Shen, Shuai Mu, and Tianyin Xu,
+						  Xuhao Luo, Weihai Shen, Shuai Mu, and Tianyin Xu,
 						  <br>
 						  In Proceedings of the 2022 USENIX Annual Technical Conference (<font color="#083b89"><b>USENIX ATC'22</b></font>), Carlsbad, CA, Jul. 2022.
 						  <br>
 						  Code/data: <a href="https://github.com/xlab-uiuc/depfast" target="_blank">https://github.com/xlab-uiuc/depfast</a> (<a href="https://github.com/xlab-uiuc/depfast/tree/atc_ae" target="_blank">research artifact</a>)
+						  <br>
+						  <font color="#C40233">
+					            <b>Featured by <a href="https://dtornow225.substack.com/p/issue-19-depfast-orchestrating-code" target="_blank">The Weekend Read</a></b>
+					          </font>
 					  </span>
 				  </div>
 		  </td>
