--- a/pub.html
+++ b/pub.html
@@ -89,7 +89,7 @@ td.papers {
 						  In Proceedings of the 2024 USENIX Annual Technical Conference (<font color="#083b89"><b>USENIX ATC'24</b></font>), Santa Clara, CA, Jul. 2024.
 						  <br>
 						  <font color="#C40233">
-						  Contributions to <a href="https://docs.kernel.org/trace/kprobes.html" target="_blank">Linux Kprobes</a>:
+						  <b>Contributions to <a href="https://docs.kernel.org/trace/kprobes.html" target="_blank">Linux Kprobes</a>:</b>
 						  </font>
 						  <br>
 						  <a href="https://github.com/torvalds/linux/commit/290eb13f1a657313177789159a6d1786187cf168" target="_blank">x86/kprobes: boost more instructions from grp2/3/4/5</a>
