add Xudong's and Hao's articles

--- a/pub.html
+++ b/pub.html
@@ -71,6 +71,26 @@ td.papers {
 						  Xudong Sun, Wenjie Ma, Jiawei Tyler Gu, Zicheng Ma, Tej Chajed, Jon Howell, Andrea Lattuada, Oded Padon, Lalith Suresh, Adriana Szekeres, and Tianyin Xu
 						  <br>
 						  In Proceedings of the 18th USENIX Symposium on Operating Systems Design and Implementation (<font color="#083b89"><b>OSDI'24</b></font>), Santa Clara, CA, Jul. 2024.
+						  <br>
+						  <font color="#C40233">
+							<b>Invited to publish at <a href="https://www.usenix.org/publications/loginonline/anvil-building-formally-verified-kubernetes-controllers" target="_blank">USENIX ;login:</a></b>
+					      </font>
+						</span>
+				  </div>
+		</td>
+	</tr>
+
+	<tr>
+		<td class="date"><font color="#083b89">;login:</font></td>
+			<td class="papers">
+				  <div align="justify" class="STYLE4">
+					<p></p>
+						<span style="font-size: 12pt;">
+						  <strong>Anvil: Building Kubernetes Controllers That Do Not Break</strong> [<a href="https://www.usenix.org/publications/loginonline/anvil-building-formally-verified-kubernetes-controllers" target="_blank">paper</a> | <a href="pub/anvil-login_bib.txt" target="_blank">bib</a>]
+						  <br>
+						  Xudong Sun, Jiawei Tyler Gu, Cody Rivera, Tej Chajed, Jon Howell, Andrea Lattuada, Oded Padon, Lalith Suresh, Adriana Szekeres, and Tianyin Xu
+						  <br>
+						  USENIX ;login:, Jun. 2024.
 						</span>
 				  </div>
 		</td>
@@ -171,6 +191,22 @@ td.papers {
 	</tr>
 
 	<tr>
+		<td class="date"><font color="#083b89">GetMobile</font></td>
+			<td class="papers">
+				  <div align="justify" class="STYLE4">
+					<p></p>
+						<span style="font-size: 12pt;">
+						  <strong>Take the Blue Pill: Pursuing Mobile App Testing Fidelity, Efficiency, and Accessibility with Virtual Device Farms</strong> [<a href="pub/virtual-device-getmobile.pdf" target="_blank">paper</a> | <a href="pub/virtual-device-getmobile_bib.txt" target="_blank">bib</a>]
+						  <br>
+						  Hao Lin, Jiaxing Qiu, Hongyi Wang, Zhenhua Li, Liangyi Gong, Di Gao, Yunhao Liu, Feng Qian, Zhao Zhang, Ping Yang, and Tianyin Xu
+						  <br>
+						  Mobile Computing and Communications (GetMobile), 28(1): 5-9, Mar. 2024.
+						</span>
+				  </div>
+		</td>
+	</tr>
+
+	<tr>
 		<td class="date"><font color="#083b89">SOSP'23</font></td>
 			<td class="papers">
 				  <div align="justify" class="STYLE4">
@@ -186,7 +222,7 @@ td.papers {
 						  <br>
 						  <font color="#C40233">
 					            <b>Selected for solution showcase at <a href="https://events.linuxfoundation.org/kubecon-cloudnativecon-europe/" target="_blank">KubeCon + CloudNativeCon Europe 2024</a></b>
-					          </font>
+					      </font>
 					  </span>
 				  </div>
 		</td>
@@ -230,7 +266,7 @@ td.papers {
 						  <br>
 						  Artifact: <a href="https://github.com/Android-Emulation-Testing/emu-fidelity-ae" target="_blank">https://github.com/Android-Emulation-Testing/emu-fidelity-ae</a>
 						  <br>
-						  <font color="#C40233"><b>Selected as an Highlight article by SIGMOBILE Mobile Computing and Communications Review (GetMobile): <a href="pub/virtual-device-getmobile.pdf" target="_blank">pdf</a></b></font>
+						  <font color="#C40233"><b>Selected as an Highlight article by SIGMOBILE Mobile Computing and Communications Review: <a href="pub/virtual-device-getmobile.pdf" target="_blank">pdf</a></b></font>
 					  </span>
 				  </div>
 		  </td>
