--- a/pub.html
+++ b/pub.html
@@ -72,6 +72,9 @@ td.papers {
 						  <br>
 						  In Proceedings of the 18th USENIX Symposium on Operating Systems Design and Implementation (<font color="#083b89"><b>OSDI'24</b></font>), Santa Clara, CA, Jul. 2024.
 						  <br>
+						  Project: <a href="https://github.com/vmware-research/verifiable-controllers" target="_blank">https://github.com/vmware-research/verifiable-controllers</a>
+							(<a href="https://github.com/vmware-research/verifiable-controllers/tree/osdi24" target="_blank">research artifact<a>)
+						  <br>
 						  <font color="#C40233">
 							<b>Invited to publish at <a href="https://www.usenix.org/publications/loginonline/anvil-building-formally-verified-kubernetes-controllers" target="_blank">USENIX ;login:</a></b>
 					      </font>
@@ -86,9 +89,11 @@ td.papers {
 				  <div align="justify" class="STYLE4">
 					<p></p>
 						<span style="font-size: 12pt;">
-						  <strong>Anvil: Building Kubernetes Controllers That Do Not Break</strong> [<a href="https://www.usenix.org/publications/loginonline/anvil-building-formally-verified-kubernetes-controllers" target="_blank">paper</a> | <a href="pub/anvil-login_bib.txt" target="_blank">bib</a>]
+						  <strong>Anvil: Building Kubernetes Controllers That Do Not Break</strong> [<a href="https://www.usenix.org/publications/loginonline/anvil-building-formally-verified-kubernetes-controllers" target="_blank">web</a> | <a href="pub/anvil-login_bib.txt" target="_blank">bib</a>]
 						  <br>
 						  Xudong Sun, Jiawei Tyler Gu, Cody Rivera, Tej Chajed, Jon Howell, Andrea Lattuada, Oded Padon, Lalith Suresh, Adriana Szekeres, and Tianyin Xu
+						  <br>
+						  Project: <a href="https://github.com/vmware-research/verifiable-controllers" target="_blank">https://github.com/vmware-research/verifiable-controllers</a>
 						  <br>
 						  USENIX ;login:, Jun. 2024.
 						</span>
@@ -108,6 +113,8 @@ td.papers {
 						  <br>
 						  In Proceedings of the 2024 USENIX Annual Technical Conference (<font color="#083b89"><b>USENIX ATC'24</b></font>), Santa Clara, CA, Jul. 2024.
 						  <br>
+						  Artifact: <a href="https://github.com/hardos-ebpf-fuzzing/atc24-uno-kprobe" target="_blank">https://github.com/hardos-ebpf-fuzzing/atc24-uno-kprobe</a>
+						  <br>
 						  <font color="#C40233">
 						  <b>Contributions to <a href="https://docs.kernel.org/trace/kprobes.html" target="_blank">Linux Kprobes</a>:</b>
 						  </font>
@@ -117,6 +124,8 @@ td.papers {
 						  <a href="https://github.com/torvalds/linux/commit/e884edbb844fd6935e4368734edd9f3fa46ec5c2" target="_blank">x86/kprobes: prohibit kprobing on INT and UD</a>
 						  <br>
 						  <a href="https://github.com/torvalds/linux/commit/f5d03da48d062966c94f0199d20be0b3a37a7982" target="_blank">x86/kprobes: fix incorrect return address calculation in kprobe_emulate_call_indirect</a>
+						  <br>
+						  <a href="https://github.com/torvalds/linux/commit/e4778a0ef322834718f8e42da3901eb99fef1208" target="_blank">x86/kprobes: Refactor can_{probe,boost} return type to bool</a>
 						</span>
 				  </div>
 		</td>
