--- a/pub.html
+++ b/pub.html
@@ -75,6 +75,8 @@ td.papers {
 						  Project: <a href="https://github.com/vmware-research/verifiable-controllers" target="_blank">https://github.com/vmware-research/verifiable-controllers</a>
 							(<a href="https://github.com/vmware-research/verifiable-controllers/tree/osdi24" target="_blank">research artifact<a>)
 						  <br>
+						  <font color="#C40233"><b>Jay Lepreau Best Paper Award</b></font>
+						  <br>
 						  <font color="#C40233">
 							<b>Invited to publish at <a href="https://www.usenix.org/publications/loginonline/anvil-building-formally-verified-kubernetes-controllers" target="_blank">USENIX ;login:</a></b>
 					      </font>
