--- a/travel.html
+++ b/travel.html
@@ -153,7 +153,7 @@ div.Section1
                                                 </li>
 						<li><font color="#083b89"><b>China</b></font>:
                           <ul style="list-style-type:circle">
-                            <li>Beijing (2009) </li>
+                            <li>Beijing (2009, 2024) </li>
                             <li>Changzhou (2008) </li>
                             <li>Chuzhou (1998) </li>
                             <li>Danyang (2000) </li>
@@ -165,7 +165,7 @@ div.Section1
                             <li>Jiangyin (2008) </li>
                             <li>Kunshan (2009) </li>
                             <li>Mudanjiang (1993) </li>
-                            <li>Nanjing (2003-2009) </li>
+                            <li>Nanjing (2003-2009, 2013, 2024) </li>
                             <li>Nanling (2013) </li>
                             <li>Shanghai (hometown) </li>
                             <li>Shaoxing (2002) </li>
@@ -176,7 +176,7 @@ div.Section1
                             <li>Wuhu (2013) </li>
                             <li>Wuxi (2008) </li>
                             <li>Yangzhou (1996) </li>
-                            <li>Yixing (1996) </li>
+                            <li>Yixing (1996, 2024) </li>
                           </ul>
                         </li>
 						<li><font color="#083b89"><b>Croatia</b></font>:
@@ -320,7 +320,7 @@ div.Section1
                                                 </li>
 						<li><font color="#083b89"><b>Portugal</b></font>:
                                                   <ul style="list-style-type:circle">
-						     <li>Lisbon (2011) </li>
+						     <li>Lisbon (2011, 2024) </li>
                                                   </ul>
                                                 </li>
 						<li><font color="#083b89"><b>Slovakia</b></font>:
@@ -425,6 +425,7 @@ div.Section1
                             	                    <li>Monterey, CA (2015) </li>
 						    <li>Montrose, CO (2023) </li>
 						    <li>Morro Bay, CA (2017) </li>
+						    <li>Mountain View, CA (2024) </li>
 						    <li>Nashville, TN (2022) </li>
 						    <li>Newark, CA (2017-2018) </li>
 						    <li>New Port, RI (2023) </li>
@@ -447,7 +448,7 @@ div.Section1
 						    <li>San Jose, CA (2017) </li>
 						    <li>Sandusky, OH (2021) </li>
 						    <li>Santa Barbara, CA (2017) </li>
-						    <li>Santa Clara, CA (2012, 2015, 2017, 2018) </li>
+						    <li>Santa Clara, CA (2012, 2015, 2017, 2018, 2024) </li>
 						    <li>Santa Cruz, CA (2017, 2023) </li>
 						    <li>Santa Maria, CA (2017) </li>
 						    <li>Saratoga, CA (2018) </li>
