--- a/index.html
+++ b/index.html
@@ -401,6 +401,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 						  <TR>
 						  <TD class=content_title>&nbsp;</TD>
 					      <TD class=content width="96%">
+						      <p class="STYLE223">2016 <a href="" target="_blank">Jay Lepreau Best Paper Award at OSDI'24 (Anvil)</a></p>
 						      <p class="STYLE223">2024 C.W. Gear Outstanding Junior Faculty Award (tribute to <a href="https://cs.illinois.edu/news/remembering-department-head-faculty-member-charles-william-bill-gear" target="_blank">Professor C.W. Gear</a>)</p>
 						      <p class="STYLE223">2024 Dean's Award for Excellence in Research</p>
 						      <p class="STYLE223">2023 Gilles Muller Best Artifact Award at EuroSys'23</p>
@@ -421,7 +422,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 						      <p class="STYLE223">2019 (Spring) UIUC List of Teachers Ranked as Excellent (for CS 598)</p>
 						      <p class="STYLE223">2018 (Fall) UIUC List of Teachers Ranked as Excellent (for  CS 598)</p>
 					              <p class="STYLE223">2017 <a href="https://cse.ucsd.edu/graduate/cse-department-awards" target="_blank">UCSD CSE Doctoral Award for Research</a></p>
-						      <p class="STYLE223">2016 <a href="https://cns.ucsd.edu/best-paper-award-received-at-the-osdi-2016-conference/" target="_blank">Jay Lepreau Best Paper Award at OSDI'16</a></p>
+						      <p class="STYLE223">2016 <a href="https://cns.ucsd.edu/best-paper-award-received-at-the-osdi-2016-conference/" target="_blank">Jay Lepreau Best Paper Award at OSDI'16 (PCheck)</a></p>
 						      <p class="STYLE223">2010 Erasmus Mundus LiSUM Scholarship</p>
 						      <p class="STYLE223">2009 Best Paper Award at International Conference on Communications</p>
 						</TD>
