--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -86,6 +86,22 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
             <span style="font-size: 12pt;">
+            <strong>Jason Liu</strong>
+	    <br>
+            Department of Computer Science, University of Illinois at Urbana-Champaign
+            <br>
+            Advisor: <a href="https://sts.cs.illinois.edu/team/adam-bates.html" target="_blank">Adam Bates</a>
+          </span>
+        </div>
+      </td>
+  </tr>
+
+  <tr>
+    <td class="date"><font color="#083b89"></font></td>
+      <td class="papers">
+        <div align="justify" class="STYLE4">
+          <p></p>
+            <span style="font-size: 12pt;">
             <strong>Houxiang Ji</strong>
 	    <br>
             Department of Computer Science, University of Illinois at Urbana-Champaign
