--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 						  <TR>
 						  <TD class=content_title>&nbsp;</TD>
 					      <TD class=content width="96%">
-						      <p class="STYLE223">2016 <a href="" target="_blank">Jay Lepreau Best Paper Award at OSDI'24 (Anvil)</a></p>
+						      <p class="STYLE223">2024 <a href="pub/osdi24_award_anvil.pdf" target="_blank">Jay Lepreau Best Paper Award</a> at OSDI'24 (<a href="pub/anvil.pdf" target="_blank">Anvil</a>)</p>
 						      <p class="STYLE223">2024 C.W. Gear Outstanding Junior Faculty Award (tribute to <a href="https://cs.illinois.edu/news/remembering-department-head-faculty-member-charles-william-bill-gear" target="_blank">Professor C.W. Gear</a>)</p>
 						      <p class="STYLE223">2024 Dean's Award for Excellence in Research</p>
 						      <p class="STYLE223">2023 Gilles Muller Best Artifact Award at EuroSys'23</p>
@@ -422,7 +422,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 						      <p class="STYLE223">2019 (Spring) UIUC List of Teachers Ranked as Excellent (for CS 598)</p>
 						      <p class="STYLE223">2018 (Fall) UIUC List of Teachers Ranked as Excellent (for  CS 598)</p>
 					              <p class="STYLE223">2017 <a href="https://cse.ucsd.edu/graduate/cse-department-awards" target="_blank">UCSD CSE Doctoral Award for Research</a></p>
-						      <p class="STYLE223">2016 <a href="https://cns.ucsd.edu/best-paper-award-received-at-the-osdi-2016-conference/" target="_blank">Jay Lepreau Best Paper Award at OSDI'16 (PCheck)</a></p>
+						      <p class="STYLE223">2016 <a href="https://cns.ucsd.edu/best-paper-award-received-at-the-osdi-2016-conference/" target="_blank">Jay Lepreau Best Paper Award</a> at OSDI'16 (<a href="pub/pcheck.pdf" target="_blank">PCheck</a>)</p>
 						      <p class="STYLE223">2010 Erasmus Mundus LiSUM Scholarship</p>
 						      <p class="STYLE223">2009 Best Paper Award at International Conference on Communications</p>
 						</TD>
@@ -435,7 +435,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
                         <TD class=content_title>&nbsp;</TD>
                           <TD class=content width="96%">
 			<p class="STYLE223">Kubernetes Reliability and an Avenue to Reliable Cloud Infrastructures at IEEE Emerging Technology Reliability Roundtable</p>
-			<p class="STYLE223"><a href="https://elisa.tech/event/elisa-seminar-making-linux-fly-towards-certified-linux-kernel/" target="_blank">Making Linux Fly: Towards Certified Linux Kernel</a> at ELISA Seminar</p>
+			<p class="STYLE223">Making Linux Fly: Towards Certified Linux Kernel at <a href="https://elisa.tech/event/elisa-seminar-making-linux-fly-towards-certified-linux-kernel/" target="_blank">the ELISA Seminar</a> and <a href="pub/lpc-linux-testing.pdf" target="_blank">Linux Plumbers Conference (LPC) 2024</a></p>
 			<p class="STYLE223"><a href="pub/srecon24americas_slides-xu.pdf" target="_blank">Cross-System Interaction Failures: Don't Fail through the Cracks</a> at <a href="https://www.usenix.org/conference/srecon24americas/presentation/xu" target="_blank">SREcon24 Americas</a></p>
 			<p class="STYLE223">Acto is selected as a <a href="https://static.sched.com/hosted_files/kccnceu2024/15/acto-poster-kubecon.pdf" target="_blank">solution showcase</a> at <a href="https://events.linuxfoundation.org/kubecon-cloudnativecon-europe/program/schedule/" target="_blank">KubeCon+CloudNativeCon Europe 2024</a></p>
 			<p class="STYLE223">Virtual device farm is selected as a 2024 <a href="https://www.sigmobile.org/pubs/getmobile/" target="_blank">GetMobile</a> Research Highlight article: <a href="pub/virtual-device-getmobile.pdf" target="_blank">pdf</a></p>
