--- a/index.html
+++ b/index.html
@@ -435,6 +435,10 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
                         <TR>
                         <TD class=content_title>&nbsp;</TD>
                           <TD class=content width="96%">
+							<p class="STYLE223">Wentao and team are giving 3 talks at LPC 2024 at 
+								<a href="pub/lpc-linux-testing.pdf" target="_blank">the Refereed Track</a>, 
+								<a href="pub/lpc-2024-2.pdf" target="_blank">Kernel Testing & Dependability</a>, 
+								and <a href="pub/lpc-2024-3.pdf">Safe Systems with Linux</a></p>
 							<p class="STYLE223">Kubernetes Reliability and an Avenue to Reliable Cloud Infrastructures at IEEE Emerging Technology Reliability Roundtable</p>
 							<p class="STYLE223">Making Linux Fly: Towards Certified Linux Kernel at <a href="https://elisa.tech/event/elisa-seminar-making-linux-fly-towards-certified-linux-kernel/" target="_blank">the ELISA Seminar</a> and <a href="pub/lpc-linux-testing.pdf" target="_blank">Linux Plumbers Conference (LPC) 2024</a></p>
 							<p class="STYLE223"><a href="pub/srecon24americas_slides-xu.pdf" target="_blank">Cross-System Interaction Failures: Don't Fail through the Cracks</a> at <a href="https://www.usenix.org/conference/srecon24americas/presentation/xu" target="_blank">SREcon24 Americas</a></p>
