--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -86,7 +86,9 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
             <span style="font-size: 12pt;">
-            <strong>Jason Liu</strong>
+	    <strong><a href="https://jasondliu.com" target="_blank">Jason Liu</a></strong>
+	    <br>
+	    Designing and Analyzing Security Systems via Analysis of Log Data
 	    <br>
             Department of Computer Science, University of Illinois at Urbana-Champaign
             <br>
@@ -102,9 +104,29 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
             <span style="font-size: 12pt;">
+            <strong><a href="https://marshtompsxd.github.io" target="_blank">Xudong Sun</a></strong>
+	    <br>
+	    Testing and Verification of Cloud Infrastructure Systems
+	    <br>
+            Department of Computer Science, University of Illinois at Urbana-Champaign, passed prelim on May 2024.
+            <br>
+            Advisor: <a href="https://tianyin.github.io" target="_blank">Tianyin Xu</a>
+          </span>
+        </div>
+      </td>
+  </tr>
+	  
+  <tr>
+    <td class="date"><font color="#083b89"></font></td>
+      <td class="papers">
+        <div align="justify" class="STYLE4">
+          <p></p>
+            <span style="font-size: 12pt;">
             <strong>Houxiang Ji</strong>
 	    <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign
+	    Memory Optimization Kernel Feature Offloading in Heterogeneous Systems
+	    <br>
+            Department of Computer Science, University of Illinois at Urbana-Champaign, passed prelim on May 2024.
             <br>
             Advisor: <a href="https://csl.illinois.edu/directory/faculty/nskim" target="_blank">Nam Sung Kim</a>
           </span>
@@ -120,7 +142,9 @@ td.papers {
             <span style="font-size: 12pt;">
             <strong><a href="https://kychou.net/" target="_blank">Kuan-Yen Chou</a></strong>
 	    <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign
+	    Scalable Verification of Complex Networks
+	    <br>
+            Department of Computer Science, University of Illinois at Urbana-Champaign, passed prelim on Apr. 2024.
             <br>
             Advisor: <a href="http://caesar.web.engr.illinois.edu/" target="_blank">Matthew Caesar</a>
           </span>
@@ -136,7 +160,9 @@ td.papers {
             <span style="font-size: 12pt;">
             <strong><a href="https://sampalomad.github.io" target="_blank">Runxiang (Sam) Cheng</a></strong>
 	    <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign
+	    Test-Case Prioritization for Modern Software
+	    <br>
+            Department of Computer Science, University of Illinois at Urbana-Champaign, passed prelim on Apr. 2024.
             <br>
             Advisor: <a href="https://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a>
           </span>
@@ -154,7 +180,7 @@ td.papers {
 	    <br>
 	    Evaluating and Extending the PacketLab Design
             <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign, passed prelim on Dec 2023.
+            Department of Computer Science, University of Illinois at Urbana-Champaign, passed prelim on Dec. 2023.
             <br>
             Advisor: <a href="https://klevchen.ece.illinois.edu/" target="_blank">Kirill Levchenko</a>
           </span>
