--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -194,11 +194,11 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
             <span style="font-size: 12pt;">
-            <strong><a href="https://jeffhj.github.io/" target="_blank">Jie Huang</a></strong>
+            <strong><a href="https://jeffhj.github.io/" target="_blank">Jie Huang</a></strong>, Ph.D.
             <br>
-	    Augmenting and Safeguarding Knowledge in Large Language Models
+	    On the Capabilities and Risks Of Large Language Models
 	    <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign, passed prelim on Sep. 2023.
+            Department of Computer Science, University of Illinois at Urbana-Champaign, defended on Apr. 2024.
             <br>
             Advisor: <a href="https://cs.illinois.edu/about/people/faculty/kcchang" target="_blank">Kevin Chen-Chuan Chang</a>
           </span>
@@ -212,7 +212,7 @@ td.papers {
         <div align="justify" class="STYLE4">
           <p></p>
             <span style="font-size: 12pt;">
-            <strong>Hongpeng Guo</strong>
+            <strong>Hongpeng Guo</strong>, Ph.D.
             <br>
             Multi-objective Optimizations for Resource-efficient Large Scale Machine Learning Systems
             <br>
