--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -90,7 +90,7 @@ td.papers {
 	    <br>
 	    Designing and Analyzing Security Systems via Analysis of Log Data
 	    <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign
+            Department of Computer Science, University of Illinois at Urbana-Champaign, passed prelim on July 29, 2024.
             <br>
             Advisor: <a href="https://sts.cs.illinois.edu/team/adam-bates.html" target="_blank">Adam Bates</a>
           </span>
