--- a/thesis_committee.html
+++ b/thesis_committee.html
@@ -108,7 +108,7 @@ td.papers {
 	    <br>
 	    Testing and Verification of Cloud Infrastructure Systems
 	    <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign, passed prelim on May 2024.
+            Department of Computer Science, University of Illinois at Urbana-Champaign, passed prelim on May 17, 2024.
             <br>
             Advisor: <a href="https://tianyin.github.io" target="_blank">Tianyin Xu</a>
           </span>
@@ -126,7 +126,7 @@ td.papers {
 	    <br>
 	    Memory Optimization Kernel Feature Offloading in Heterogeneous Systems
 	    <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign, passed prelim on May 2024.
+            Department of Computer Science, University of Illinois at Urbana-Champaign, passed prelim on May 3, 2024.
             <br>
             Advisor: <a href="https://csl.illinois.edu/directory/faculty/nskim" target="_blank">Nam Sung Kim</a>
           </span>
@@ -144,7 +144,7 @@ td.papers {
 	    <br>
 	    Scalable Verification of Complex Networks
 	    <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign, passed prelim on Apr. 2024.
+            Department of Computer Science, University of Illinois at Urbana-Champaign, passed prelim on April 16, 2024.
             <br>
             Advisor: <a href="http://caesar.web.engr.illinois.edu/" target="_blank">Matthew Caesar</a>
           </span>
@@ -162,7 +162,7 @@ td.papers {
 	    <br>
 	    Test-Case Prioritization for Modern Software
 	    <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign, passed prelim on Apr. 2024.
+            Department of Computer Science, University of Illinois at Urbana-Champaign, passed prelim on April 3, 2024.
             <br>
             Advisor: <a href="https://mir.cs.illinois.edu/marinov/" target="_blank">Darko Marinov</a>
           </span>
@@ -180,7 +180,7 @@ td.papers {
 	    <br>
 	    Evaluating and Extending the PacketLab Design
             <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign, passed prelim on Dec. 2023.
+            Department of Computer Science, University of Illinois at Urbana-Champaign, passed prelim on Dec. 8, 2023.
             <br>
             Advisor: <a href="https://klevchen.ece.illinois.edu/" target="_blank">Kirill Levchenko</a>
           </span>
@@ -198,7 +198,7 @@ td.papers {
             <br>
 	    On the Capabilities and Risks Of Large Language Models
 	    <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign, defended on Apr. 2024.
+            Department of Computer Science, University of Illinois at Urbana-Champaign, defended on April 5, 2024.
             <br>
             Advisor: <a href="https://cs.illinois.edu/about/people/faculty/kcchang" target="_blank">Kevin Chen-Chuan Chang</a>
           </span>
@@ -216,7 +216,7 @@ td.papers {
             <br>
             Multi-objective Optimizations for Resource-efficient Large Scale Machine Learning Systems
             <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign, defended on Feb. 2024. 
+            Department of Computer Science, University of Illinois at Urbana-Champaign, defended on Feb. 29, 2024. 
 <!--
 		    passed prelim on Oct. 2022.
 -->
@@ -237,7 +237,7 @@ td.papers {
             <br>
             Enhancing the Reliability of Dynamic Management in Cloud Infrastructures
             <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign, defended on Nov. 2023.
+            Department of Computer Science, University of Illinois at Urbana-Champaign, defended on Nov. 17, 2023.
             <br>
             Advisor: <a href="https://pbg.cs.illinois.edu/" target="_blank">Brighten Godfrey</a>
           </span>
@@ -255,7 +255,7 @@ td.papers {
             <br>
 	       Fault-Tolerant and Fault-Recovering Garbage Collection for The Actor Model: A Collage-based Approach
             <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign, defended on Aug. 2023.
+            Department of Computer Science, University of Illinois at Urbana-Champaign, defended on Aug. 15, 2023.
             <br>
             Advisor: <a href="http://osl.cs.illinois.edu/members/agha.html" target="_blank">Gul Agha</a>
           </span>
@@ -273,7 +273,7 @@ td.papers {
             <br>
             Soft Real Time Resource Management for Vision Based Internet of Things Systems
             <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign, defended on Sep. 2022.
+            Department of Computer Science, University of Illinois at Urbana-Champaign, defended on Sep. 27, 2022.
             <br>
             Advisor: <a href="https://monet.cs.illinois.edu/people/klara/" target="_blank">Klara Nahrstedt</a>
           </span>
@@ -291,7 +291,7 @@ td.papers {
             <br>
             Empowering Automated Mobile UI Testing With External Support
             <br>
-            Department of Computer Science, University of Illinois at Urbana-Champaign, defended on Jun. 2022.
+            Department of Computer Science, University of Illinois at Urbana-Champaign, defended on Jun. 25, 2022.
             <br>
             Advisors: <a href="http://taoxie.cs.illinois.edu/" target="_blank">Tao Xie</a> and <a href="https://tianyin.github.io/" target="_blank">Tianyin Xu</a>
           </span>
