--- a/pub.html
+++ b/pub.html
@@ -78,13 +78,13 @@ td.papers {
 						  <font color="#C40233"><b>Jay Lepreau Best Paper Award</b></font>
 						  <br>
 						  <font color="#C40233">
-							<b>Invited to publish at <a href="https://www.usenix.org/publications/loginonline/anvil-building-formally-verified-kubernetes-controllers" target="_blank">USENIX ;login:</a></b>
-					      </font>
+							<b>Invited to publish at USENIX ;login: (<a href="https://www.usenix.org/publications/loginonline/anvil-building-formally-verified-kubernetes-controllers" target="_blank">article</a>)</b>
+					      	</font>
 						</span>
 				  </div>
 		</td>
 	</tr>
-
+<!--
 	<tr>
 		<td class="date"><font color="#083b89">;login:</font></td>
 			<td class="papers">
@@ -102,7 +102,7 @@ td.papers {
 				  </div>
 		</td>
 	</tr>
-
+-->
 	<tr>
 		<td class="date"><font color="#083b89">ATC'24</font></td>
 			<td class="papers">
@@ -237,6 +237,8 @@ td.papers {
 						  <br>
 						  <font color="#C40233">
 							<b>Covered by <a href="https://cs.illinois.edu/news/-acto-IBM" target="_blank">IllinoisCS News</a></b>
+							<br>
+							<b>Invited to publish at USENIX ;login: (<a href="https://www.usenix.org/publications/loginonline/acto-push-button-end-end-testing-operation-correctness-kubernetes-operators" target="_blank">article</a>)</b>
 					  	  </font>
 					  </span>
 				  </div>
