--- a/index.html
+++ b/index.html
@@ -367,6 +367,7 @@ Assistant: Ruth Anders (rutha at illinois dot edu)</span>
 									(<a href="https://cs423-uiuc.github.io/spring20/" target="_blank">Spring 20</a>)
 									(<a href="https://cs423-uiuc.github.io/fall22/" target="_blank">Fall 22</a>)
 									(<a href="https://cs423-uiuc.github.io/fall23/" target="_blank">Fall 23</a>)
+									(<a href="https://cs423-uiuc.github.io/fall24/" target="_blank">Fall 24</a>)
 								</p>
 								<p class="STYLE223">CS 591(SN): Systems Research Seminar
 									(<a href="https://systems-seminar-uiuc.github.io/spring19/" target="_blank">Spring 19</a>)
